--- a/dambo.css
+++ b/dambo.css
@@ -56,14 +56,33 @@
 }
 
 .top-control-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  margin-bottom: 20px;
+   display: grid;
+  grid-template-columns: 2fr 1fr 1fr auto;
+  gap: 12px;
 }
+.select-box.full { width: 100%; }
+.select-box.half { width: 100%; }
+
 
 .select-box {
   flex: 1 1 200px;
+}
+.search-wrapper {
+  width: 100%;
+  position: relative;
+}
+
+.search-wrapper input {
+  width: 100%;
+  padding: 14px 40px 14px 20px;
+  border-radius: 12px;
+}
+
+.search-icon {
+  position: absolute;
+  right: 14px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .custom-select {
